Findbugs Warning: various